--- a/UI/mainwindow.ui
+++ b/UI/mainwindow.ui
@@ -723,7 +723,7 @@ padding: 5px;</string>
      </widget>
     </widget>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="txt_search">
     <property name="geometry">
      <rect>
       <x>850</x>
